# 3D-Clinical

./: .gitignore  DATA_LICENSES.md  LICENSE  README.md  pyproject.toml
cases/synthetic-smoke-000/: case.json
configs/: models.yaml  task_biopsy.yaml
docs/: DATASHEET.md  METHODOLOGY.md  PROTOCOL.md  SAFETY.md
experiments/: RIGOR_SUMMARY.md  rigorous_reanalysis.json  rigorous_reanalysis.py
experiments/difficulty_titration/: README.md  agents_graded.py  gen_titration_scaled.py  gen_titration_scenes.py  results_titration.json  results_titration_scaled.json  run_titration.py  run_titration_scaled.py
experiments/pilot_anterior_blocker/: README.md  decisions_claude_pierce.json  emit_packets.py  gen_pierce_cases.py  results_agents.json  results_manual.json  run_agents.py  run_manual_pilot.py
experiments/pilot_claude_manual/: DECISIONS_TEMPLATE.json  README.md  decisions_claude.json  dummy_decisions.json  gen_cases.py  make_dummy_decisions.py  results.json  run_pilot.py
tests/: test_anterior_blocker.py  test_calibration.py  test_coords.py  test_fast_backend.py  test_geometry.py  test_geometry_sdf.py  test_scene.py  test_scoring.py  test_smoke_episode.py  test_stager.py  test_stats.py
trace3d/: __init__.py  cli.py  config.py  coords.py  geometry.py  geometry_sdf.py  scene.py  schemas.py  stager.py
trace3d/agents/: __init__.py  scripted.py
trace3d/analysis/: __init__.py  calibration.py  stats.py
trace3d/orchestrator/: __init__.py  loop.py  providers.py
trace3d/scoring/: __init__.py  aggregate.py  deterministic.py  fast_batch.py  judge.py  stager_score.py
(+228 files in other folders)
